tests/spec/non_conformant/errors/unicode/report/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/unicode/report"

#[allow(unused)]
fn runner() -> crate::TestRunner {
    super::runner().with_cwd("report")
}

// Ignoring "after", tests with expected error not implemented yet.

// Ignoring "before", tests with expected error not implemented yet.
